# test-mcpb

./: .gitignore  README.md  links.txt  official.md
auth/: manifest.json
hello/: manifest.json
http/: Cargo.toml  manifest.json
http/src/: lib.rs  main.rs
scripts/: mu
sensitive/: Cargo.toml  manifest.json
sensitive/src/: lib.rs  main.rs
